--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
+* {
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+.database {
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 350px;
+  cursor: pointer;
+}
+
+.new {
+  color: #4d8835;
+}
+
+.tables {
+  position: absolute;
+  top: 100px;
+  left: 600px;
+  border: 1px solid black;
+  border-radius: 5px;
+  min-height: 80vh;
+  min-width: 60vw;
+}
+
+.bold {
+  font-weight: bold;
 }
