--- a/src/index.css
+++ b/src/index.css
@@ -31,10 +31,20 @@ code {
   left: 600px;
   border: 1px solid black;
   border-radius: 5px;
-  min-height: 80vh;
-  min-width: 60vw;
+  height: 80vh;
+  width: 60vw;
+  overflow-y: scroll;
 }
 
 .bold {
   font-weight: bold;
+}
+
+table {
+  border-collapse: collapse;
+  margin-bottom: 50px;
+}
+
+th, td {
+  border: solid 1px black;
 }
