--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,19 @@ table {
 th, td {
   border: solid 1px black;
 }
+
+.file {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  right: -20px;
+  bottom: -20px;
+  border-radius: 5px;
+  border: 100px solid rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
+  background-color: white;
+}
+
+pre {
+  overflow-y: scroll;
+}
